# strain-scan

./: .gitignore  POSCAR  README.md  pyproject.toml  test_strain_scan.py
.beads/: issues.jsonl
strain_scan/: __init__.py  plotting.py
